# Nuxtjs-with-FastAPI

./: README.md
back-end/: app.py  database.db  main.py  pyproject.toml
front-end/assets/: main.css
front-end/pages/: index.vue  users.vue
